--- a/Quiz_Master.vcxproj.filters
+++ b/Quiz_Master.vcxproj.filters
@@ -195,6 +195,9 @@
     <ClCompile Include="source\helpers\Shuffle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\commands\HelpCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\helpers\Constants.h">
@@ -384,6 +387,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers\helpers\Shuffle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\commands\HelpCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
